# xrite-export

./: .gitignore  Cargo.toml  PLAN.md  README.md  Reading-excel-chart-template.xlsx  TEMPLATE_GUIDE.md  build.rs
InkDensityTool/: settings.json
assets/: build_ai_template.jsx  index.html  lo_uno_helper.py  runner.jsx  template_extended.xlsx  template_standard.xlsx
src/: main.rs  settings.rs
src/core/: mod.rs  models.rs  session.rs  targets.rs
src/export/: excel.rs  illustrator.rs  libreoffice.rs  mod.rs  pdf_merge.rs  placeholders.rs  report.rs  svg.rs
src/gui/: app.rs  job_config.rs  mod.rs  shape_tabs.rs  weight_grid.rs
src/web/: companion.rs  mod.rs  server.rs
