[package]
name = "ink-density-tool"
version = "0.1.0"
edition = "2021"
description = "CMYK ink density recording tool for print professionals"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Platform directories (%APPDATA%, ~/.config, etc.)
dirs = "6"

# Excel export (read+write existing templates)
umya-spreadsheet = "2"

# PDF merge
lopdf = "0.34"

# Asset embedding
rust-embed = "8"

# GUI (egui + eframe for native window)
eframe = "0.30"
egui = "0.30"
egui_extras = "0.30"

# File dialogs
rfd = "0.15"

# Temp files for export
tempfile = "3"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Lazy statics
once_cell = "1"
